--- a/frontend/home.html
+++ b/frontend/home.html
@@ -161,7 +161,7 @@
 				</div>
 				<div class="col-md-1"></div>
 				<div class="col-md-5">
-					<img src="about.jpg" class="img-fluid img-responsive w-100" style="border-radius: 20px;">
+					<img src="wdwd.jpg" class="img-fluid img-responsive w-100" style="border-radius: 20px;">
 				</div>
 			</div>
 		</div>
@@ -177,12 +177,7 @@
 					<div class="col-md-1"></div>
 					<div class="col-md-6">
 						<h1>Send Token Request</h1>
-						<p class="pt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p class="pt-2">Any organization can register on the <b>Queu-E</b> website and make their token available on the app. All they need to do is to register with their organization’s e-mail, select the type of the organization, enter the password and confirm it. Once the organization gets registered on the website, anyone can get a token for the registered organizations easily by following few simple steps ; download the app by clicking the ‘Download App’ button, open the app, log-in by entering name and mobile number or else just log-in via google account and voila! Get a token for any organization at ease!</p>
 						<a href="" class="pt-2"><button class="btn btn-large"><i class="fas fa-download"></i>&nbsp; Download App</button></a>
 					</div>
 				</div>
